--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
   "expect.js": "~0.3.1",
   "kuma-base": "1.x",
   "react": "15.6.x",
-  "react-addons-test-utils": "0.14.x",
   "react-dom": "15.6.x",
-  "uxcore-kuma": "2.x",
+  "uxcore-kuma": "*",
   "uxcore-tools": "0.2.x"
  },
  "dependencies": {
