--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     ],
     "react/no-unused-prop-types": "off",
     "react/forbid-prop-types": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "react/prefer-stateless-function": "off"
   }
 }
