Add enzyme and react-test-renderer to devDependencies.

--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
   ],
   "devDependencies": {
     "console-polyfill": "^0.2.2",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "es5-shim": "^4.5.8",
     "expect.js": "~0.3.1",
     "kuma-base": "1.x",
     "react": "15.6.x",
     "react-addons-test-utils": "0.14.x",
     "react-dom": "15.6.x",
+    "react-test-renderer": "15.x",
     "uxcore-kuma": "2.x",
     "uxcore-tools": "0.2.x"
   },
