--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
   "devDependencies": {
     "console-polyfill": "^0.2.2",
     "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "1.x",
     "es5-shim": "^4.5.8",
     "expect.js": "~0.3.1",
     "kuma-base": "1.x",
-    "react": "^16.4.1",
+    "react": "16.x",
     "react-addons-test-utils": "15.x",
-    "react-dom": "^16.4.1",
+    "react-dom": "16.x",
     "react-test-renderer": "16.x",
     "uxcore-kuma": "2.x",
     "uxcore-tools": "0.3.x"
