--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-addons-test-utils": "15.x",
     "react-dom": "16.x",
     "react-test-renderer": "16.x",
-    "uxcore-kuma": "2.x",
+    "uxcore-kuma": "*",
     "uxcore-tools": "0.3.x"
   },
   "dependencies": {
