--- a/package.json
+++ b/package.json
@@ -1,55 +1,54 @@
 {
-  "name": "uxcore-switch",
-  "version": "0.1.9",
-  "description": "uxcore-switch component for uxcore.",
-  "repository": "https://github.com/uxcore/uxcore-switch.git",
-  "author": "eternalsky",
-  "main": "build/index.js",
-  "scripts": {
-    "start": "uxcore-tools run start",
-    "server": "uxcore-tools run server",
-    "lint": "uxcore-tools run lint",
-    "build": "uxcore-tools run build",
-    "test": "uxcore-tools run test",
-    "coverage": "uxcore-tools run coverage",
-    "pub": "uxcore-tools run pub",
-    "dep": "uxcore-tools run dep",
-    "tnpm-dep": "uxcore-tools run tnpm-dep",
-    "chrome": "uxcore-tools run chrome",
-    "browsers": "uxcore-tools run browsers",
-    "saucelabs": "uxcore-tools run saucelabs",
-    "update": "uxcore-tools run update",
-    "tnpm-update": "uxcore-tools run tnpm-update"
-  },
-  "bugs": {
-    "url": "http://github.com/uxcore/uxcore-switch/issues"
-  },
-  "keywords": [
-    "react",
-    "react-component",
-    "uxcore-switch",
-    "Switch",
-    "switch"
-  ],
-  "devDependencies": {
-    "console-polyfill": "^0.2.2",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "1.x",
-    "es5-shim": "^4.5.8",
-    "expect.js": "~0.3.1",
-    "kuma-base": "1.x",
-    "react": "16.x",
-    "react-addons-test-utils": "15.x",
-    "react-dom": "16.x",
-    "react-test-renderer": "16.x",
-    "uxcore-kuma": "*",
-    "uxcore-tools": "0.3.x"
-  },
-  "dependencies": {
-    "classnames": "^2.1.2",
-    "object-assign": "^4.0.0",
-    "rc-switch": "^1.6.0"
-  },
-  "contributors": [],
-  "license": "MIT"
+ "name": "uxcore-switch",
+ "version": "0.1.9",
+ "description": "uxcore-switch component for uxcore.",
+ "repository": "https://github.com/uxcore/uxcore-switch.git",
+ "author": "eternalsky",
+ "main": "build/index.js",
+ "scripts": {
+  "start": "uxcore-tools run start",
+  "server": "uxcore-tools run server",
+  "lint": "uxcore-tools run lint",
+  "build": "uxcore-tools run build",
+  "test": "uxcore-tools run test",
+  "coverage": "uxcore-tools run coverage",
+  "pub": "uxcore-tools run pub",
+  "dep": "uxcore-tools run dep",
+  "tnpm-dep": "uxcore-tools run tnpm-dep",
+  "chrome": "uxcore-tools run chrome",
+  "browsers": "uxcore-tools run browsers",
+  "saucelabs": "uxcore-tools run saucelabs",
+  "update": "uxcore-tools run update",
+  "tnpm-update": "uxcore-tools run tnpm-update"
+ },
+ "bugs": {
+  "url": "http://github.com/uxcore/uxcore-switch/issues"
+ },
+ "keywords": [
+  "react",
+  "react-component",
+  "uxcore-switch",
+  "Switch",
+  "switch"
+ ],
+ "devDependencies": {
+  "console-polyfill": "^0.2.2",
+  "enzyme": "^3.0.0",
+  "enzyme-adapter-react-16": "1.x",
+  "expect.js": "~0.3.1",
+  "kuma-base": "1.x",
+  "react": "16.x",
+  "react-dom": "16.x",
+  "react-test-renderer": "16.x",
+  "uxcore-kuma": "*",
+  "uxcore-tools": "^0.3.0",
+  "babel-polyfill": "6.x"
+ },
+ "dependencies": {
+  "classnames": "^2.1.2",
+  "object-assign": "^4.0.0",
+  "rc-switch": "^1.6.0"
+ },
+ "contributors": [],
+ "license": "MIT"
 }
